gccida/g2/push_block
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_block/src/expr.c:3589:23: error: use of undeclared identifier 'machine_mode'
v4 = convert_modes( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), ptr_mode, size, 1); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_block/src/expr.c:3612:27: error: use of undeclared identifier 'machine_mode'
v11 = copy_to_mode_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v6); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_block/src/expr.c:3622:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_block/src/obj/expr.o] Error 1
